# greencode-metrics

./: .gitignore  .sops.yaml  CLAUDE.md  ONBOARDING.md  README.md
actions/dora-deploy/: README.md  action.yml
docker/: docker-compose.yml
docker/caddy/: Caddyfile  docker-compose.caddy.yml
docs/: CONVENTIONS.md  ROADMAP.md  STATUS.md  baselines.yml  conectar-repo-a-dora.md
docs/runbooks/: dora-onboarding.md  droplet-bootstrap.md  ec2-bootstrap.md
docs/spikes/: 2026-07-02-sentry-devlake-webhook-mapping.md
docs/superpowers/plans/: 2026-07-02-sentry-poller-cfr-mttr.md
docs/superpowers/specs/: 2026-07-02-onboard-dora-skill-design.md  2026-07-02-sentry-poller-cfr-mttr-design.md
scripts/: bootstrap-droplet.sh  bootstrap-ec2.sh  onboard-github-project.sh  onboard-sonarcloud-project.sh
secrets/: prod.env.example  prod.env.sops
services/sentry-poller/: Dockerfile  config.yml  pyproject.toml
services/sentry-poller/sentry_poller/: __main__.py  config.py  devlake.py  sentry.py  sync.py  transform.py
services/sentry-poller/tests/: test_config.py  test_devlake.py  test_main.py  test_sentry.py  test_sync.py  test_transform.py
